fixed navbar overflow

--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -32,3 +32,6 @@ li.tab.col.s4 > a{
 .submit-about{
   margin-top: 25px;
 }
+.tabs {
+  overflow: hidden;
+}
